<resources>
    <string name="app_name">Mobilno Računarstvo</string>
    <string name="fixed_assets">Osnovna sredstva</string>
    <string name="employees">Zaposleni</string>
    <string name="locations">Lokacije</string>
    <string name="asset_registers">Popisne liste</string>
    <string name="settings">Podešavanja</string>
    <string name="language">Jezik</string>
    <string name="serbian">Srpski</string>
    <string name="english">Engleski</string>
    <string name="add">Dodaj</string>
    <string name="row_img">Slika</string>
    <string name="edit">Izmijeni</string>
    <string name="remove">Ukloni</string>
    <string name="confirm">Potvrdi</string>
    <string name="cancel">Poništi</string>
    <string name="firstName">Ime</string>
    <string name="lastName">Prezime</string>
    <string name="save">Sačuvaj</string>
    <string name="form_notice">Unesite podatke u zadata polja.</string>
    <string name="search">Pretraga</string>
    <string name="name">Naziv</string>
    <string name="description">Opis</string>
    <string name="bar_code">Bar kod</string>
    <string name="details">Detalji</string>
    <string name="ok">OK</string>
    <string name="price">Cijena</string>
    <string name="add_image">Dodaj fotografiju</string>
    <string name="camera">Kamera</string>
    <string name="no_image">nije izabrana</string>
    <string name="location">Lokacija</string>
    <string name="scan_barcode">Skeniraj barkod</string>
    <string name="camera_permission_notice">Da bi pristupili kameri morate odobriti dozvolu za kameru u sistemskim opcijama</string>
    <string name="camera_permission_title">Dozvola korištenja kamere</string>
    <string name="camera_permission_message">Kako bi mogli koristiti ovu mogućnost, dozvolite aplikaciji korištenje kamere.</string>
    <string name="creation_date">Datum dodavanja</string>
    <string name="employee">Zaposleni</string>
    <string name="barcode_not_unique">Unešeni bar kod već postoji</string>
    <string name="assets_list">Lista pripadajućih sredstava</string>
    <string name="add_item">Dodaj stavku</string>
    <string name="choose_option">Odaberite selekciju</string>
    <string name="obligated_employee">Zaduženi zaposleni</string>
    <string name="new_location">Nova lokacija</string>
    <string name="fixed_asset">Osnovno sredstvo</string>
    <string name="fields_empty">Popunite sva polja u formi</string>
    <string name="item_present">Osnovna sredstva moraju biti jedinstvena</string>
    <string name="asset_not_found">Osnovno sredstvo nije pronađeno</string>
    <string name="fixed_asset_details_header">Naziv - Zadužena osoba - Nova lokacija</string>
</resources>