<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/aubergine_700"
        app:titleTextColor="@color/white"
        app:title="@string/settings"
        android:theme="@style/MainToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/language_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_toolbar"
        android:text="@string/language"
        app:drawableStartCompat="@drawable/ic_language"
        android:theme="@style/OptionTitle"/>

    <RadioGroup
        android:id="@+id/rg_languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_title"
        android:layout_marginStart="@dimen/rg_margin">
        <RadioButton
            android:id="@+id/radio_serbian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serbian"/>
        <RadioButton
            android:id="@+id/radio_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>