<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/fixed_asset_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginHorizontal="@dimen/margin_med"
        android:hint="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"/>

    <EditText
        android:id="@+id/fixed_asset_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="@dimen/desc_max_height"
        android:layout_marginTop="@dimen/margin_med"
        android:layout_marginHorizontal="@dimen/margin_med"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@id/fixed_asset_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"/>

    <EditText
        android:id="@+id/bar_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_med"
        android:layout_marginHorizontal="@dimen/margin_med"
        android:hint="@string/bar_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fixed_asset_desc"
        app:layout_constraintEnd_toStartOf="@id/scan_bar_code"
        android:inputType="number"/>

    <ImageButton
        android:id="@+id/scan_bar_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_barcode_scanner"
        android:layout_marginTop="@dimen/margin_med"
        android:layout_marginEnd="@dimen/margin_med"
        app:layout_constraintStart_toEndOf="@id/bar_code"
        app:layout_constraintTop_toBottomOf="@id/fixed_asset_desc"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>