<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large"
        >


        <TextView
            android:id="@+id/fad_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/fad_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fad_name"
            android:layout_marginTop="@dimen/margin_med"/>

        <TextView
            android:id="@+id/fad_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fad_image"
            android:layout_marginTop="@dimen/margin_med"/>

        <TextView
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fad_description"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginTop="@dimen/margin_med"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/fad_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/price_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fad_description"
            android:layout_marginTop="@dimen/margin_med"
            android:layout_marginStart="@dimen/padding_small"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/barcode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_med"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/bar_code"/>

        <TextView
            android:id="@+id/fad_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/barcode_text"
            app:layout_constraintTop_toBottomOf="@id/fad_price"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_med"
            android:layout_marginStart="@dimen/padding_small"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/emp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barcode_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_med"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/employee"/>

        <TextView
            android:id="@+id/fad_employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/emp_text"
            app:layout_constraintTop_toBottomOf="@id/fad_barcode"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_med"
            android:layout_marginStart="@dimen/padding_small"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emp_text"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginTop="@dimen/margin_med"
            android:text="@string/creation_date"/>

        <TextView
            android:id="@+id/fad_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/date_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fad_employee"
            android:layout_marginStart="@dimen/padding_small"
            android:layout_marginTop="@dimen/margin_med"
            app:layout_constraintHorizontal_bias="0"/>

        <com.google.android.gms.maps.MapView
            android:id="@+id/fad_map"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fad_date"
            android:layout_marginTop="@dimen/margin_med"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

